pgadmin/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: pgadmin-svc
spec:
 ports:
 - protocol: TCP
   port: 80
   targetPort: http
 selector:
   app: pgadmin
 type: NodePort
#  externalIPs:
#   - 192.168.1.17
