pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: pgadmin-svc
      port:
        number: 80
  rules:
  - host: "dbadmin.mydomain.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pgadmin-svc
            port:
              number: 80
